--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -69,7 +69,7 @@
             <!-- Footer -->
         <footer>
             <div class="container text-center">
-                <p>Copyright &copy; Your Website 2017</p>
+                <p>Copyright &copy;Evolutions 2017</p>
             </div>
         </footer>
 
